@@ -132,6 +132,7 @@ Clients:
 - The `--insecure` option now disables all server certificate verification.
 - Fix incorrect output formatting in mosquitto_sub when using field widths
   with `%x` and `%X` for printing the payload in hex.
+- Add float printing option to mosquitto_sub.
 
 
 2.0.14 - 2021-11-17
